--- a/packages/telescope-core/lib/client/main.html
+++ b/packages/telescope-core/lib/client/main.html
@@ -1,5 +1,5 @@
 <head>
   <title>Loading...</title>
-  <meta name="viewport" content="initial-scale=1.0">
+  <meta name='viewport' content='width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no'>
   <link id="rss-link" rel="alternate" type="application/rss+xml" title="New Posts" href="/feed.xml"/>
 </head>
